scss/partials/_post_to_button.scss
div.post-to-button {
  height: 32px;
  padding: 0 26px 0 0;
  position: relative;
  border-radius: 4px;

  &.disabled {
    
    div.post-to-bt-container button.post-to-bt {
      cursor: not-allowed;
      color: rgba($deep_navy, 0.5);
      background-color: rgba($deep_navy, 0.1);
    }

    div.post-to-arrows-container {
      background-color: rgba($deep_navy, 0.1);

      button.post-to-arrows {
        background-color: rgba($deep_navy, 0.1);
        background-image: cdnUrl("/img/ML/select_arrows.svg");
      }
    }
  }

  div.post-to-bt-container {
    position: relative;

    button.post-to-bt {
      padding: 7px 16px;
      background-color: $carrot_green;
      height: 32px;
      @include OC_Body_Bold();
      font-size: 14px;
      line-height: 18px;
      color: white;
      max-width: 250px;
      overflow: hidden;
      white-space: pre;
      text-overflow: ellipsis;
      cursor: pointer;
      text-align: left;
      vertical-align: top;
      border-top-left-radius: 4px;
      border-bottom-left-radius: 4px;
      opacity: 1;

      @include mobile() {
        max-width: 38vw;
      }
    }

    &.force-show-tooltip div.post-bt-tooltip {
      display: block;
    }

    // @include big_web() {
    //   &:hover {
    //     div.post-bt-tooltip {
    //       display: block;
    //     }
    //   }
    // }

    &.tt-title div.post-bt-tooltip {
      width: 142px;
    }

    &.tt-abstract div.post-bt-tooltip {
      width: 144px;
    }

    div.post-bt-tooltip {
      background-color: white;
      white-space:pre-wrap;
      max-width: none;
      text-align: left;
      opacity: 1;
      @include OC_Body_Book();
      font-size: 14px;
      color: $deep_navy;
      line-height: 18px;
      padding: 11px 16px;
      border-radius: 4px;
      box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.07);
      border: 1px solid $mid_light_grey;
      position: absolute;
      top: 34px;
      right: 0;
      z-index: #{$navbar_zindex + 157};
      display: none;

      @include mobile() {
        right: -8px;
        top: 36px;
      }
    }
  }

  div.post-to-arrows-container {
    width: 26px;
    height: 32px;
    position: absolute;
    right: 0;
    top: 0;
    background-color: $carrot_green;
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;

    button.post-to-arrows {
      width: 26px;
      height: 32px;
      background-image: cdnUrl("/img/ML/select_arrows_white.svg");
      background-size: 8px 10px;
      background-repeat: no-repeat;
      background-position: center;
      background-color: rgba($deep_navy, 0.1);
      border-top-right-radius: 4px;
      border-bottom-right-radius: 4px;
      cursor: pointer;
    }
  }

  div.sections-picker-container {
    position: absolute;
    top: 32px;
    left: 0;
    z-index: #{$navbar_zindex + 156};
    max-height: 370px;
    width: 100%;

    div.sections-picker {
      overflow: auto;
      position: relative;
      top: unset;
      left: unset;
      width: 100%;

      @include mobile() {
        width: calc(100% - 16px - 32px);
      }
    }
  }
}

